--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,18 @@
 <resources>
     <string name="app_name">Freshman</string>
+
+    <string name="error">获取的过程出了些错误:(</string>
+
+    <string name="admission_title">入学必备</string>
+    <string name="admission_edit">编辑</string>
+    <string name="admission_delete">删除</string>
+    <string name="admission_add">添加</string>
+    <string name="admission_add_hint">请输入待办事项</string>
+    <string name="admission_none_description">暂无特定描述</string>
+
+    <string name="admission_hint_title">功能介绍</string>
+    <string name="admission_hint_a">1.文本框右侧【箭头】查看每一项任务具体详情。</string>
+    <string name="admission_hint_b">2.右上角的【编辑】，通过勾选进行选择性删除（未标识可删除圆圈的则为报道必需）。</string>
+    <string name="admission_hint_c">3.点击左侧【空方框】勾选该项即为完成，再次单击即可恢复。</string>
+    <string name="admission_hint_d">4.右下角【加号】图样可自定义添加新待办。</string>
 </resources>
