--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,7 @@
     <string name="admission_hint_c">3.点击左侧【空方框】勾选该项即为完成，再次单击即可恢复。</string>
     <string name="admission_hint_d">4.右下角【加号】图样可自定义添加新待办。</string>
 
+    <string name="freshman_junxunteji">军训特辑</string>
+
     <string name="freshman_strategy_reveal">数据揭秘</string>
 </resources>
