2018-8-10 微小的贡献*2
Signed-off-by: hosigus <hosigus9733@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="admission_hint_b">2.右上角的【编辑】，通过勾选进行选择性删除（未标识可删除圆圈的则为报道必需）。</string>
     <string name="admission_hint_c">3.点击左侧【空方框】勾选该项即为完成，再次单击即可恢复。</string>
     <string name="admission_hint_d">4.右下角【加号】图样可自定义添加新待办。</string>
+
+    <string name="freshman_strategy_reveal">数据揭秘</string>
 </resources>
