--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,9 @@
     <string name="freshman_mine_huodong">大型活动</string>
 
     <string name="freshman_strategy_reveal">数据揭秘</string>
-    <string name="freshman_military_photo" >军训图片</string>
-    <string name="freshman_military_video" >军训视频</string>
+    <string name="freshman_military_photo">军训图片</string>
+    <string name="freshman_military_video">军训视频</string>
+
+    <string name="freshman_entrance_title">校园攻略</string>
 
 </resources>
