main page finish

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,6 @@
     <string name="freshman_military_video">军训视频</string>
 
     <string name="freshman_entrance_title">校园攻略</string>
+    <string name="freshman_strategy_main_welcome">迎新</string>
 
 </resources>
