--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,13 +16,7 @@
     <string name="freshmen_admission_hint_c">3.点击左侧【空方框】勾选该项即为完成，再次单击即可恢复。</string>
     <string name="freshmen_admission_hint_d">4.右下角【加号】图样可自定义添加新待办。</string>
 
-    <string name="freshman_junxunteji">军训特辑</string>
-    <string name="freshman_cqupt_mien">重邮风采</string>
-    <string name="freshman_mien_zuzhi">学生组织</string>
-    <string name="freshman_mine_huodong">大型活动</string>
-
     <string name="freshman_strategy_reveal">数据揭秘</string>
-    <string name="freshman_chatoline">线上交流</string>
     <string name="freshman_military_photo">军训图片</string>
     <string name="freshman_military_video">军训视频</string>
 
@@ -33,5 +27,10 @@
     <string name="freshman_campus_data_detail_sex">男女比例</string>
     <string name="freshman_campus_data_detail_difficult">最难比例</string>
     <string name="freshman_input_school_name">请输入学院名称/班级代码</string>
+    <string name="freshman_chat_online">线上交流</string>
+    <string name="freshman_military_show">军训特辑</string>
+    <string name="freshman_cy_mien">重邮风采</string>
+    <string name="freshman_student_group">学生组织</string>
+    <string name="freshman_big_campaign">大型活动</string>
 
 </resources>
