--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
     <string name="freshman_campus_data_detail_title">数据揭秘</string>
     <string name="freshman_campus_data_detail_sex">男女比例</string>
     <string name="freshman_campus_data_detail_difficult">最难比例</string>
-    <string name="freshman_input_school_name">请输入学院名称/班级代码</string>
+    <string name="freshman_input_school_name">搜索</string>
     <string name="freshman_chat_online">线上交流</string>
     <string name="freshman_military_show">军训特辑</string>
     <string name="freshman_cy_mien">重邮风采</string>
