--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
 
     <string name="freshman_campus_data_detail_sex">男女比例</string>
     <string name="freshman_campus_data_detail_difficult">最难比例</string>
+    <string name="freshman_campus_data_title_subject">2017–2018学年第二学期挂科情况</string>
     <string name="freshman_input_school_name">搜索</string>
     <string name="freshman_top5_cate">最受好评的TOP5家美食</string>
     <string name="freshman_chat_online">线上交流</string>
