bug fix,fit screen by hosigus 2018-8-16

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,8 @@
 
     <string name="freshman_main_welcome">迎新</string>
 
+    <string name="freshman_words_title">我想对你说</string>
+
     <string name="freshman_campus_data_detail_sex">男女比例</string>
     <string name="freshman_campus_data_detail_difficult">最难比例</string>
     <string name="freshman_campus_data_title_subject">2017–2018学年第二学期挂科情况</string>
