by Cynthia at 8/17 完成报道流程 修复数据揭秘里面的crash问题 修复其他的一些bug…… 算是完工？

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,5 +39,6 @@
     <string name="freshman_cy_mien">重邮风采</string>
     <string name="freshman_student_group">学生组织</string>
     <string name="freshman_big_campaign">大型活动</string>
+    <string name="freshman_report">报道流程</string>
 
 </resources>
